# faultline.ai

./: Makefile  README.md  docker-compose.yaml
client/: .env.example  Dockerfile  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/actions/: analyze.ts  fetch-openapi.ts
client/app/api/artifacts/analyze/: route.ts
client/app/editor/: page.tsx
client/app/editor/components/: analyze-dialog.tsx  editor.tsx
client/app/jobs/[jobId]/: page.tsx
client/app/review/: layout.tsx
client/app/review/[jobId]/: loading.tsx  page.tsx
client/app/review/[jobId]/components/: bar-chart.tsx  copyable-job-id.tsx  findings-list.tsx  index.ts  line-chart.tsx  next-steps.tsx  pie-chart.tsx  review-charts.tsx  score-ring.tsx
client/app/runs/: loading.tsx  page.tsx
client/components/core/: footer.tsx  header.tsx  logo.tsx  theme-switch.tsx
client/components/ui/: tooltip.tsx
client/lib/: api.ts  endpoints.ts  fastapi.ts  openapi.ts
client/lib/hooks/: job-status.ts
client/lib/store/: editor.ts
client/lib/types/: index.ts  prismjs.d.ts
docs/: AI.md  ARCH.md  BACKEND.md  DEPLOYMENT.md  FRONTEND.md  REDIS.md
server/: .env.example  Dockerfile  makefile  pyproject.toml
server/app/: config.py  main.py  redis_client.py
server/app/logic/: analysis.py  demo.py
server/app/routers/: __init__.py  analysis.py  feedback.py
server/app/schemas/: __init__.py  analysis.py  feedback.py
