[project]
name = "faultline-ai-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "loguru>=0.7.3",
    "pydantic-ai>=1.35.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
]
